...
    },
    {
      icon: <Icon.LogOut01 size={24} color={themeColors.status.error} />,
      title: t("settings.logout"),
      titleColor: themeColors.status.error,
      onPress: handleLogout,
      testID: "logout-button",
    },
  ];

  const bottomListItems = [
    {
      icon: <Icon.GitCommit size={24} color={themeColors.foreground.primary} />,
...
