...
      isImporting,
    });
  };

  return (
    <BaseLayout useSafeArea>
      <Container testID="welcome-screen">
        <StyledIconContainer>
          <FreighterLogo />
        </StyledIconContainer>
        <View>
          <StyledDisplay>{t("freighterWallet")}</StyledDisplay>
          <StyledSpacer $size={32} />
...
