...
          {t("welcomeBanner.addXLM")}
        </Button>
        <Button
          secondary
          xl
          isFullWidth
          testID="welcome-banner-dismiss-button"
          onPress={onDismiss}
        >
          {t("welcomeBanner.doThisLater")}
        </Button>
      </View>
    </View>
...
