...
        *{t("settings.deleteAccountDisclaimer")}
      </Text>
    </View>
  );

  return (
    <BaseLayout testID="settings-screen" insets={{ top: false, bottom: false }}>
      <ScrollView
        className="flex-1"
        showsVerticalScrollIndicator={false}
        bounces={false}
      >
        <View
...
