...

    return t("transactionProcessingScreen.to");
  };

  return (
    <BaseLayout insets={{ top: false }}>
      <View className="flex-1 justify-between" testID="send-processing-screen">
        <View className="flex-1 items-center justify-center px-[16px]">
          <View className="items-center gap-[12px] w-full">
            {getStatusIcon()}

            <Display xs medium>
              {getStatusText()}
...
              {t("transactionProcessingScreen.viewTransaction")}
            </Button>
            <Button
              tertiary
              xl
              onPress={handleClose}
              testID="send-processing-done-button"
            >
              {t("common.done")}
            </Button>
          </View>
        ) : (
          <View className="gap-[12px] pb-[8px]">
...
