...
      transactionXDR,
      isRecipientMuxed,
    ],
  );

  return (
    <View className="flex-1 gap-[12px]" testID="send-review-sheet">
      <View className="rounded-[16px] p-[16px] gap-[16px] bg-background-tertiary">
        <Text lg>{t("transactionReviewScreen.title")}</Text>
        <View className="gap-[16px]">
          {type === SendType.Token &&
            selectedBalance &&
            tokenAmount &&
...
            biometric={!isRequiredMemoMissing && !isConfirmDisabled}
            onPress={() => onConfirm?.()}
            isLoading={isLoading || isValidatingMemo}
            tertiary
            xl
            disabled={isConfirmDisabled}
            testID="send-review-confirm-button"
          >
            {getButtonText()}
          </Button>
        </View>
      );
    }, [
...
              : t("transactionAmountScreen.confirmAnyway")
          }
          onPress={onConfirm}
          isLoading={isLoading}
          disabled={isDisabled}
          variant={isMalicious ? "error" : "secondary"}
          testID="send-review-confirm-anyway-button"
        />
      );

      if (!shouldUseRowLayout) {
        return (
          <>
...
