...
    return undefined;
  }, [isMalicious, isSuspicious]);

  return (
    <BaseLayout insets={{ top: false, bottom: false }}>
      <View
        testID="token-details-screen"
        className="flex-1 gap-8 mt-5 max-xs:mt-2 max-xs:gap-4"
      >
        <TokenBalanceHeader
          tokenId={tokenId}
          tokenSymbol={tokenSymbol}
          actualTokenSymbol={actualTokenDetails?.symbol}
...
          <View className="flex-1">
            <Button
              tertiary
              xl
              isFullWidth
              onPress={handleSendPress}
              testID="token-details-send-button"
            >
              {t("tokenDetailsScreen.send")}
            </Button>
          </View>
        </View>
        <View
...
