...
      fetchAccountsFiatTotals,
      allAccounts,
    ]);

    return (
      <BaseLayout
        testID="home-screen"
        insets={{ bottom: false, top: false, left: false, right: false }}
      >
        <WelcomeBannerBottomSheet
          modalRef={welcomeBannerBottomSheetModalRef}
          onAddXLM={navigateToBuyXLM}
          onDismiss={handleWelcomeBannerDismiss}
...
            />
            <HomeActionButton
              Icon={Icon.ArrowUp}
              title={t("home.send")}
              disabled={hasZeroBalance}
              onPress={handleSendPress}
              testID="icon-button-send"
            />
            {swapEnabled && (
              <HomeActionButton
                Icon={Icon.RefreshCw02}
                title={t("home.swap")}
                disabled={hasZeroBalance}
...
